apps/web/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 138 76% 97%;
    --foreground: 221 50% 11%;
    --card: 214.3 31.8% 91.4%;
    --card-foreground: 221 50% 11%;
    --popover: 214.3 31.8% 91.4%;
    --popover-foreground: 221 50% 11%;
    --primary: 267 87% 40%;
    --primary-foreground: 210 40% 98%;
    --secondary: 228 59% 21%;
    --secondary-foreground: 221 50% 11%;
    --neutral: 215 18% 47%;
    --neutral-foreground: 221 50% 11%;
    --muted: 214.3 31.8% 91.4%;
    --muted-foreground: 215 18% 47%;
    --accent: 228 59% 21%;
    --accent-foreground: 221 50% 11%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;
    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 227 92% 5%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 1rem;
  }
  .dark {
    --background: 227 92% 5%;
    --foreground: 138 76% 97%;
    --card: 138 76% 97%;
    --card-foreground: 227 92% 5%;
    --popover: 138 76% 97%;
    --popover-foreground: 227 92% 5%;
    --primary: 267 87% 40%;
    --primary-foreground: 210 40% 98%;
    --secondary: 228 59% 21%;
    --secondary-foreground: 267 87% 40%;
    --neutral: 218 22% 65%;
    --neutral-foreground: 227 92% 5%;
    --muted: 228 59% 21%;
    --muted-foreground: 218 22% 65%%;
    --accent: 228 59% 21%;
    --accent-foreground: 267 87% 40%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;
    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 227 92% 5%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 1rem;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

